fix mobile post count and date alignment

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -19,3 +19,10 @@
 .topic-item-stats .discourse-tags{
   display: none !important; 
 }
+
+.topic-item-stats .num.activity{
+  margin-left: 0px !important; 
+}
+.topic-list-item .topic-list-data.posts{
+  justify-content: left !important; 
+}
